# os-benchmark

./: .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile-cm  README.rst  setup.cfg  setup.py  tox.ini
docs/: requirements.txt
docs/source/: conf.py  configuration.rst  drivers.rst  index.rst  installation.rst  usage.rst
docs/source/_static/: bench-output.txt
os_benchmark/: .benchmarks.py.swp  .console.py.swp  __init__.py  benchmarks.py  console.py  errors.py  logger.py  prepare.py  utils.py
os_benchmark/benchmarks/: __init__.py  ab.py  base.py  copy.py  download.py  errors.py  features.py  multi_download.py  ping.py  pycurl.py  tcpping.py  tcptraceroute.py  traceroute.py  upload.py  video_streaming.py
os_benchmark/benchmarks/features/: __init__.py  copy_object.py  cors.py  delete_objects.py  enable_bucket_logging.py  get_torrent.py  lock_object.py  main.py  put_bucket_tag.py  put_object_tag.py
os_benchmark/drivers/: alibaba.py  aws.py  aws_boto.py  azure.py  backblaze.py  backblaze_s3.py  base.py  bluvalt.py  bso.py  cloudferro.py  dell_ecs_test.py  digitalocean.py  errors.py  exoscale.py  fs.py  fugacloud.py  gcore.py  google.py  gridscale.py  hopla.py  hopla_s3.py  ibm.py  infomaniak.py  ionos.py  leafcloud.py  leviia.py  linode.py  minio_cli.py  minio_sdk.py  obs.py  oci.py  oracle.py  oracle_s3.py  otc.py  outscale.py  ovhcloud.py  ovhcloud_perf.py  ovhcloud_std.py  r2.py  ram.py  (+10 more)
os_benchmark/tests/: test_utils.py  utils.py
os_benchmark/tests/test_benchmarks/: test_base.py  test_upload.py
os_benchmark/tests/test_drivers/: test_base.py  test_s3.py
