[metadata]
name = os-benchmark
version = attr: os_benchmark.__version__
author = Anthony Monthe
author-email = anthony@cloud-mercato.com
url = https://github.com/cloudmercato/os-benchmark
project_urls = 
summary = Handy tool for Object Storage performance benchmark
description-file = file: README.rst
long_description = file: README.rst
description-content-type = text/x-rst; charset=UTF-8
license = BSD 3-Clause License

requires-dist =
    setuptools

classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: File Transfer Protocol (FTP)
    Topic :: Internet :: WWW/HTTP
    Topic :: System :: Networking
    Topic :: System :: Benchmark

keywords = benchmark, cloud, object storage


[options]
zip_safe = False
include_package_data = True
package_dir=
packages=find:
    
install_requires =
    pyyaml
    faker
    randomio2
    requests

test_suite = os_benchmark.tests
tests_require =
    moto

[options.extras_require]
s3 = boto3
minio_sdk = minio
minio_cli = minio
swift = python-swiftclient
exoscale = boto3
azure = azure-storage-blob
bluvalt = python-swiftclient
digitalocean = boto3
linode = boto3
backblaze = b2sdk
backblaze_s3 = boto3
bso = boto3
google_s3 = boto3
otc = boto3
obs = boto3
scaleway = boto3
wasabi = boto3
oracle = oci
oracle_s3 = boto3
google = google-cloud-storage
ibm =
    boto3
    ibm-cos-sdk
ovhcloud =
    python-swiftclient
    python-keystoneclient
ovhcloud_perf = boto3
ovhcloud_std = boto3
storj_s3 = boto3
storj = uplink-python
oci = boto3

video_streaming = aiohttp

# test_suite = os_benchmark.tests.get_suite

[options.entry_points]
console_scripts =
    os-benchmark = os_benchmark.console:main


[coverage:run]
omit = os_benchmark/tests/*
branch = True
source = os_benchmark

[coverage:report]
show_missing = true
exclude_lines =
    noqa
    NotImplemented
